@@ -1,11 +1,12 @@
 
 ----------------------------------------------------------------------
 mlUnit 1.6.8-SNAPSHOT
-Started: 2015-03-27 13:32:50.
+Started: 2015-03-31 22:42:31.
 Test directory: C:\Users\Alexander\repositories\mlunit\sample\failure_samples
 ----------------------------------------------------------------------
 
 Running suite test_error_output <<< FAILED
+
   test_special_characters error:
     This some special characters: !"§$%&/()=?. Enjoy.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_error_output.m at line 7
@@ -14,6 +15,7 @@ Running suite test_error_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
+
   test_unknown_function error:
     Undefined function or variable 'do_you_know_this'.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_error_output.m at line 11
@@ -22,6 +24,7 @@ Running suite test_error_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
+
   test_invalid_usage error:
     Input argument "name" is undefined.
     In C:\Program Files\MATLAB\R2007b\toolbox\matlab\iofun\fileparts.m at line 16
@@ -31,6 +34,7 @@ Running suite test_error_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
+
   test_syntax_error_ifend error:
     Illegal use of reserved keyword "end".
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\sample_syntax_error_ifend.m at line 3
@@ -40,6 +44,7 @@ Running suite test_error_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
+
   test_syntax_error_paren error:
     Unbalanced or unexpected parenthesis or bracket.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\sample_syntax_error_paren.m at line 3
@@ -51,6 +56,7 @@ Running suite test_error_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
 
 Running suite test_errorfail_output <<< FAILED
+
   test_success error:
     Error in tear_down fixture:
     Undefined function or variable 'unknown_function_call'.
@@ -60,61 +66,75 @@ Running suite test_errorfail_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
+
   test_success fail:
     (no message available)
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_errorfail_output.m at line 9
 
 Running suite test_failure_output <<< FAILED
+
   test_empty fail:
     (no message available)
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 13
+
   test_not_empty fail:
     (no message available)
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 18
+
   test_false fail:
     (no message available)
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 23
+
   test_true fail:
     (no message available)
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 28
+
   test_fail fail:
     This some custom fail message
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 32
+
   test_equals fail:
     Data not equal:
       Expected : 3
       Actual   : 4
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 37
+
   test_equals_array fail:
     Data not equal:
       Expected : [1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16]
       Actual   : [1 2 3 4 5 6 7 8 9 10.000001 11 12 13 14 15]
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 43
+
   test_equals_arraymatrix fail:
     Data not equal:
       Expected : [1 2 3 4;5 6 7 8;9 10 11 12;13 14 15 16]
       Actual   : [1 2 3 4;5 6 7 8;9 10.000001 11 12;13 14 15 16]
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 51
+
   test_equals_string fail:
     Data not equal:
       Expected : 'foo'
       Actual   : 'fOo'
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 56
+
   test_equals_cell fail:
     Data not equal:
       Expected : {3, 'foo'}
       Actual   : {3, 'fOo'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 63
+
   test_equals_struct fail:
     Data not equal at position .foo:
       Expected : {'hi', 'ho'}
       Actual   : {'ho', 'hi'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 71
+
   test_equals_nested_struct fail:
     Data not equal at position .tee.foo:
       Expected : {'hi', 'ho'}
       Actual   : {'ho', 'hi'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 80
+
   test_equals_nested_struct_multiple_differences fail:
     Data not equal at position .tee.bar:
       Expected : [3 4]
@@ -123,6 +143,7 @@ Running suite test_failure_output <<< FAILED
       Expected : {'hi', 'ho'}
       Actual   : {'ho', 'hi'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 90
+
   test_equals_nested_struct_many_differences fail:
     Data not equal at position .bar:
       Expected : [3 4]
@@ -135,11 +156,13 @@ Running suite test_failure_output <<< FAILED
       Actual   : [3 5]
     ... more differences detected, but not displayed.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 102
+
   test_equals_structarray fail:
     Data not equal:
       Expected : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'hi', 'ho'}; bar:4}]
       Actual   : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'ho', 'hi'}; bar:4}]
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 110
+
   test_equals_object fail:
     Data not equal:
       Expected : Time Series Object: unnamed
@@ -169,36 +192,45 @@ Running suite test_failure_output <<< FAILED
           Size                  [1   1  12]
           Data type             double
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 120
+
   test_equals_handle fail:
     Data not equal:
       Expected : 0
       Actual   : 1
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 135
+
   test_equals_functionhandle fail:
     Data not equal:
       Expected : @(x)x*x+x
       Actual   : @(x)x+x*x
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 151
+
   test_equals_javaobject fail:
     Data not equal:
       Expected : hiho
       Actual   : hiHo
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 157
+
   test_not_equals fail:
     Expected and actual are equal.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 162
+
   test_error fail:
     Error expected, but none occurred.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 167
+
   test_typed_error fail:
     Error expected, but none occurred.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 172
+
   test_wrong_typed_error fail:
     Error occurred, but did not match criteria. Expected error identifier 'MATLAB:SomeError' actually was 'MATLAB:m_improper_grouping'.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 176
+
   test_warning fail:
     No warning MATLAB:rmpath:DirNotFound when executing function @()3.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 182
+
   test_implementation_fault error:
     Undefined function or variable 'unknown_function_call'.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 186
@@ -207,6 +239,7 @@ Running suite test_failure_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
+
   test_nested_functions fail:
     Nested function test.
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 194
@@ -215,7 +248,7 @@ Running suite test_failure_output <<< FAILED
 Running suite test_success_output
 
 ----------------------------------------------------------------------
-Executed 33 tests in 0.49s
+Executed 33 tests in 0.50s
 
 26 tests FAILED
 7 tests had ERRORS
